--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style-portfolio.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -143,33 +144,19 @@
             <h1>Great <span>Place</span> to enjoy</h1>
         </div>
         <div class="text-content container">
-            <div class="col-md-5">
-                <div class="img-section">
-                    <img src="images\drinks\m6obqa7iume.jpeg" width="100%">
-                </div>
-            </div>
+
             <br>
             <div class="col-md-6 col-md-offset-1">
-                <h1>OUR BEER</h1>
+                <h1>OUR BEER</h1><br>
+
                 <div class="icon-beer fa-2x"></div>
+                <div class="col-md-5">
+                    <div class="img-section">
+                        <img src="images\m6obqa7iume.jpeg" width="100%">
+                    </div>
+                </div>
                 <p class="desc-text">Here at Restaurant we’re all about the love of beer. New and bold flavors enter our doors every week, and we can’t help but show them off. While we enjoy the classics, we’re always passionate about discovering something new, so stop by
                     and experience our craft at its best.</p>
-                <ul id="portfolio">
-                    <li class="item "><img src="images\drinks\jagmohan.jpg" alt="Food" width="200" height="180">
-                        <h2 class="white">Jagmohan</h2>
-                    </li>
-
-                    <li class="item dinner special"><img src="images\drinks\kesar.jpg" alt="Food" width="200" height="180">
-                        <h2 class="white">Royal Kesar</h2>
-                    </li>
-                    <li class="item dinner special"><img src="images\drinks\royal_rose.jpg" alt="Food" width="200" height="180">
-                        <h2 class="white">Royal rose</h2>
-                    </li>
-                    <li class="item special"><img src="images\drinks\royalChanderHaas.jpg" alt="Food" width="200" height="180">
-                        <h2 class="white">Royal chandermal</h2>
-                    </li>
-
-                </ul>
             </div>
         </div>
     </section>
@@ -234,7 +221,7 @@
                 <!-- Form Area -->
                 <div class="contact-form">
                     <!-- Form -->
-                    <form id="contact-us" method="post" action="reserve.php">
+                    <form id="contact-us" method="post">
                         <!-- Left Inputs -->
                         <div class="container">
                             <div class="row">
