--- a/task1 -Rajasthani Rasoi/index.html
+++ b/task1 -Rajasthani Rasoi/index.html
@@ -295,6 +295,13 @@
             </div>
         </div>
     </footer>
+    
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+
 
 
 </body>
